# libbase64

./: CMakeLists.txt
include/base64/: base64.h
src/: base64.cpp  base64.h
tests/: test.cpp
